# OBOPA

./: README.md
Homework/Week1/Huiswerk_Week1/: Docent.cpp  Docent.h  Huiswerk_Week1.cpp  Huiswerk_Week1.sln  Huiswerk_Week1.vcxproj  Huiswerk_Week1.vcxproj.filters  Module.cpp  Module.h  Student.cpp  Student.h
Homework/Week1/Huiswerk_Week1/Debug/: Huiswerk_Week1.ilk  Huiswerk_Week1.pch  vc141.idb
Homework/Week1/Na_Les2/: Huiswerk_Week1.cpp  Module.h  SPECIAL_README.md
Homework/Week2/GameOfLife/: Beehive.cpp  Beehive.h  Block.h  CMakeLists.txt  CustomRules.cpp  CustomRules.h  GameOfLife.cpp  Glider.cpp  Glider.h  GosperGliderGun.cpp  Loaf.cpp  MatrixDrawer.cpp  MatrixDrawer.h  OriginalRules.h  RandomRules.cpp  RandomRules.h
Homework/Week2/GameOfLife/GameOfLife/: Beehive.cpp  Blink.cpp  Blink.h  Block.cpp  CustomRules.cpp  GameOfLife.cpp  GameRules.cpp  GameRules.h  Glider.cpp  GosperGliderGun.cpp  GosperGliderGun.h  Loaf.cpp  Loaf.h  MatrixDrawer.cpp  MatrixDrawer.h  OriginalRules.cpp  OriginalRules.h  RandomRules.cpp  Toad.cpp
Homework/Week2/GameOfLifeDS/: FirstProject.nds  GameOfLifeDS_NoRules.nds  README.md
Homework/Week3/: README.md
Homework/Week3/DecoratorGame/: DecoratorGame.nds
Homework/Week4/Algorithms/: main.cpp
Homework/Week4/Templates/: TemplateLibrary.h  main.cpp
Homework/Week5/: README.md
Homework/Week5/Opdracht-ProducerConsumer/: main.cpp
Homework/Week5/Threading/: Concurrent_Vector.h  main.cpp
Homework/Week6/: README.md
Homework/Week7/: README.md
Homework/Week7/CHIP8/: cpu.cpp  cpu.h  main.cpp
(+60 files in other folders)
